# tekne-admin-bot

./: .dockerignore  .dokploy  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  DEPLOY.md  DOKPLOY.md  Dockerfile  GRANULAR_EDIT_USAGE.md  IMPROVEMENTS.md  PLANNING.md  PROMPT_CACHING.md  README.md  config.py  docker-compose.yml  docker-entrypoint.sh  main.py  proposal_agent.py  proposals.db  pyproject.toml  run_tests.sh
agent/: __init__.py  agent.py  dynamic_model.py
agent/team/: __init__.py  copymaster.py  manager.py  reviewer.py
agent/tools/: __init__.py  cleanup.py  git.py  image.py  pdf.py  proposal.py  routing.py
bot/: __init__.py  agent_processor.py  auth.py  handlers.py  session.py  utils.py
bot/handlers/: __init__.py  _shared.py  commands.py  messages.py
core/: __init__.py  api_logger.py  callbacks.py  cost_tracking.py  redis_client.py
docs/: FIX_HAIKU_ERRORS.md  agno-docs-basics-teams.txt  agno-docs-basics-tools.txt  agno-docs-basics-workflows.txt  context-aware-optimization.md  haiku-first-strategy.md  token-optimization-strategies.md
tests/: README.md  __init__.py
tests/agent/: __init__.py  test_model_selection.py
tests/tools/: __init__.py
